feat(source): implement source save flow and validation
This commit introduces a new flow for saving sources using Spring Shell components, including:

- Implemented a new SourceSaveFlowParam model to manage flow parameters.
- Created a createSourceSaveFlow method in FlowFactory to build the flow.
- Integrated the flow into the SourceCommand to handle source creation and updates.
- Added validation to the SourceSaveDto using Jakarta Validation annotations.
- Added a new INCOME_SOURCE_REQUIRED error message to the Error enum.
- Improved error handling and user feedback in the SourceCommand.
- Refactored the SourceSaveDto to use the new flow context.